--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         Exemple texte <br>
         à la ligne
         <h2>Sous-titre</h2>
+        <h6>test</h6>
         <p>ex paragraphe</p>
         <hr>
         <p>2e ex paragraphe</p>
+       
+        
 
     </body>
 </html>
