ajout de commentaire

--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
 
     </head>
     <body>
+
         <h1>titre</h1>
         Exemple texte <br>
         à la ligne
+
         <h2>Sous-titre</h2>
         <h6>test</h6>
         <p>ex paragraphe</p>
         <hr>
         <p>2e ex paragraphe</p>
-       
+        <p>test en live</p>
+
+       <!--un commentaire-->
+        <!-- un autre commentaire -->
         
 
     </body>
