ajout image et texte

--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <head>
-<title>Page Html</title>
+<html lang="fr">
+  <head>
+    <title>Page Html</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+  </head>
+  <body>
+    <h1>Le Japon</h1>
+    <p>Découvrez le Japon en anime</p>
 
-    </head>
-    <body>
+    <img
+      src="pexels-satoshi-hirayama-2070033.jpg"
+      alt="Image"
+      style="width: 400px; height: 300px"
+    />
 
-        <h1>titre</h1>
-        Exemple texte <br>
-        à la ligne
+    <meta name="description" content="Découvrir le Japon" />
 
-        <h2>Sous-titre</h2>
-        <h6>test</h6>
-        <p>ex paragraphe</p>
-        <hr>
-        <p>2e ex paragraphe</p>
-        <p>test en live</p>
+    <h2>Sous-titre</h2>
+    <h6>test</h6>
+    <p>ex paragraphe</p>
+    <hr />
+    <p>2e ex paragraphe</p>
+    <p>test en live</p>
 
-       <!--un commentaire-->
-        <!-- un autre commentaire -->
-        
-
-    </body>
+    <!--un commentaire-->
+    <!-- un autre commentaire -->
+  </body>
 </html>
