--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   </head>
   <body>
-    <h1>Le Japon</h1>
-    <p>Découvrez le Japon en anime</p>
+    <h1>Découvrez le Japon</h1>
+    <p>Le pays du soleil levant</p>
 
     <img
       src="pexels-satoshi-hirayama-2070033.jpg"
@@ -16,12 +16,36 @@
 
     <meta name="description" content="Découvrir le Japon" />
 
-    <h2>Sous-titre</h2>
-    <h6>test</h6>
-    <p>ex paragraphe</p>
+    <h2>Visite du Japon</h2>
+    <p>le <strong>CHOC</strong> des cultures</p>
+    <img
+      src="pexels-alexander-krivitskiy-3535453.jpg"
+      alt="Image"
+      style="width: 400px; height: 300px"
+    />
+    <p><i>à ne pas reproduire</i></p>
+
     <hr />
-    <p>2e ex paragraphe</p>
-    <p>test en live</p>
+
+    <h2>Quoi faire au Japon ?</h2>
+      
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sint quis,
+      nostrum non fugit voluptas at est consectetur, quibusdam illum assumenda
+      dolore quisquam iusto adipisci numquam, aperiam minima minus porro.
+    </p>
+
+    <dl>
+      <dt><b>Les temples</b></dt>
+      <dd>fushimi, senjo-ji,...</dd>
+      <dt><b>Street food</b></dt>
+      <dd>Tayaki,takoyaki,... </dd>
+      <dt><b>les quartiers</b></dt>
+      <dd>Akihabara, Shibuya, Harajuku...</dd>
+
+      <p>l'emphase dans <em>un texte</em>.</p>
+    </dl>
 
     <!--un commentaire-->
     <!-- un autre commentaire -->
