création fichier html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   </head>
   <body>
-    <h1>Découvrez le Japon</h1>
+    <h1>Découvrir le Japon</h1>
+
     <p>Le pays du soleil levant</p>
 
     <img
@@ -23,12 +24,11 @@
       alt="Image"
       style="width: 400px; height: 300px"
     />
-    <p><i>à ne pas reproduire</i></p>
+    <p><i>Tout doux le loup</i></p>
 
     <hr />
 
     <h2>Quoi faire au Japon ?</h2>
-      
 
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sint quis,
@@ -40,7 +40,7 @@
       <dt><b>Les temples</b></dt>
       <dd>fushimi, senjo-ji,...</dd>
       <dt><b>Street food</b></dt>
-      <dd>Tayaki,takoyaki,... </dd>
+      <dd>Tayaki,takoyaki,...</dd>
       <dt><b>les quartiers</b></dt>
       <dd>Akihabara, Shibuya, Harajuku...</dd>
 
