--- a/html-media/index.html
+++ b/html-media/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Girafe's lover</h1>
-    <img src="pexels-teddy-yang-2167374.jpg" alt="image de girafe" />
-    <img src="../assets/pexels-magda-ehlers-1201525.jpg" alt="gros plan girafe">
+    <img src="../assets/images/pexels-teddy-yang-2167374.jpg" alt="image de girafe" />
+    <img src="../assets/images/pexels-magda-ehlers-1201525.jpg" alt="gros plan girafe">
   </body>
 </html>
