--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       <p>l'emphase dans <em>un texte</em>.</p>
     </dl>
 
+    <p>Formation au <a href="https://www.ceppic.fr/">CEPPIC</a>.</p>
+
+    <P>Guide du <a href="https://www.kanpai.fr/voyage-au-japon">Japon</a></P>
+
+<p><a href="./Services/services.html">Liste des services</a></p>
+
+
     <!--un commentaire-->
     <!-- un autre commentaire -->
   </body>
