--- a/Services/services.html
+++ b/Services/services.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+
     <h1>Services</h1>
+
+    <p><a href="../index.html">Retour à l'accueil</a></p>
 
 </body>
 </html>
