--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <p>Formation au <a href="https://www.ceppic.fr/">CEPPIC</a>.</p>
 
-    <P>Guide du <a href="https://www.kanpai.fr/voyage-au-japon">Japon</a></P>
+    <P>Guide du <a href="https://www.kanpai.fr/voyage-au-japon" target="_blank">Japon</a></P>
 
 <p><a href="./Services/services.html">Liste des services</a></p>
 
