--- a/index.html
+++ b/index.html
@@ -1,74 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <title>Page Html</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-  </head>
-  <body>
-    <h1>Découvrir le Japon</h1>
-
-<a href="#footer">Footer</a>
-
-    <p>Le pays du soleil levant</p>
-
-    <img
-      src="pexels-satoshi-hirayama-2070033.jpg"
-      alt="Image"
-      style="width: 400px; height: 300px"
-    />
-
-    <meta name="description" content="Découvrir le Japon" />
-
-    <h2>Visite du Japon</h2>
-    <p>le <strong>CHOC</strong> des cultures</p>
-    <img
-      src="pexels-alexander-krivitskiy-3535453.jpg"
-      alt="Image"
-      style="width: 400px; height: 300px"
-    />
-    <p><i>Tout doux le loup</i></p>
-
-    <p id="Mes services">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus facilis expedita cupiditate ea debitis, deleniti soluta quasi veniam accusantium? Voluptates a illum dolores non dolorum quam aut enim voluptatem. Ab, sunt laudantium. Nobis nihil optio nisi. Delectus deleniti velit facere molestiae. Earum perferendis voluptates necessitatibus vitae, dolore sint ipsa aperiam veritatis labore rem quis voluptate ea magni asperiores reiciendis vero consequatur illum facilis totam ab! Laudantium soluta sequi quia magni illum quos id eos odio, esse, ullam iusto neque aut. Eius inventore possimus veritatis dolore aut libero eum, maiores et tempora repudiandae nesciunt omnis dolor doloribus tenetur accusantium aliquid reiciendis. Dolores nisi esse fugiat maxime, iste a earum animi. Eos corrupti velit beatae ut voluptate accusantium, odio autem amet inventore! Quia, aliquam. Quaerat sapiente possimus est hic beatae harum facilis architecto nisi reiciendis modi minima, voluptatibus animi eaque, eveniet et numquam! Porro totam quasi eius quia impedit laborum, id similique dolore eligendi dolor molestias ea cupiditate harum. Dolorum fugit, voluptas quo laboriosam officiis iure enim voluptates quos blanditiis a, dolore sit nobis autem, rerum laudantium nisi asperiores doloribus natus quis nam esse distinctio atque minus iste. Atque aliquam cupiditate sunt mollitia reprehenderit alias officiis illum dolore? Labore vero dolores ut!</p>
-
-    <hr />
-
-    <h2>Quoi faire au Japon ?</h2>
-
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sint quis,
-      nostrum non fugit voluptas at est consectetur, quibusdam illum assumenda
-      dolore quisquam iusto adipisci numquam, aperiam minima minus porro.
-      lorem
-    </p>
-
-    <dl>
-      <dt><b>Les temples</b></dt>
-      <dd>fushimi, senjo-ji,...</dd>
-      <dt><b>Street food</b></dt>
-      <dd>Tayaki,takoyaki,...</dd>
-      <dt><b>les quartiers</b></dt>
-      <dd>Akihabara, Shibuya, Harajuku...</dd>
-
-      <p>l'emphase dans <em>un texte</em>.</p>
-    </dl>
-
-    <p>Formation au <a href="https://www.ceppic.fr/">CEPPIC</a>.</p>
-
-    <p>
-      Guide du
-      <a href="https://www.kanpai.fr/voyage-au-japon" target="_blank">Japon</a>
-    </p>
-
-    <p><a href="./Services/services.html">Liste des services</a></p>
-
-    <p id="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quibusdam at, dignissimos nulla repellat quisquam maxime quis nisi, delectus deserunt fugit. Cupiditate distinctio quaerat amet debitis asperiores ullam vitae aliquam?</p>
-
-    <a href="#Mes services">Mes services</a><hr>
-
-    <!--un commentaire-->
-
-   <a href="./Services/services.html" target="_blank">Marabout</a>
-
-
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
 </html>
