--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+        <ul>
+            <li><a href="./html.html"></a></li>
+            <li><a href="./Services/services.html"></a></li>
+            <li><a href="./contacts.html"></a></li>
+        </ul>
+        </nav>
+    </header>
 </body>
 </html>
