--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
+      <nav>
         <ul>
-            <li><a href="./html.html"></a></li>
-            <li><a href="./Services/services.html"></a></li>
-            <li><a href="./contacts.html"></a></li>
+          <li><a href="./html.html" target="_blank">HTML</a></li>
+          <li>
+            <a href="./Services/services.html" target="_blank">Services</a>
+          </li>
+          <li><a href="./contacts.html" target="_blank">Contacts</a></li>
         </ul>
-        </nav>
+      </nav>
     </header>
-</body>
+    <main>
+      <section>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem porro
+        aliquid explicabo enim sapiente itaque ad atque fugiat animi quas
+        corrupti vel debitis, ipsam quidem sint, blanditiis odit, adipisci
+        delectus aliquam voluptas aperiam culpa minima! Molestiae natus maxime
+        repellat inventore, placeat consequuntur hic enim, tempora suscipit
+        optio, pariatur amet quae.
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, dolor. 
+            <a href="./html.html" target="_blank">Découvrir le Japon</a>
+        </p>
+      </section>
+    </main>
+    <footer>
+      <p>2023 - Formation DWWM</p>
+    </footer>
+  </body>
 </html>
